Refactor Deck class to initialize cardsPool correctly and improve card loading logic